atividade 3 da pratica 6

--- a/pratica6_2.html
+++ b/pratica6_2.html
@@ -72,7 +72,7 @@
 	Insert a number:<br> <input type="text" id="number"><br>
 	Insert a quotation:<br> <input type="text" id="quote"><br>
 	Insert a date:<br> <input type="date" id="date"><br>
-<input type="submit" onclick="validateForm();" value="vai">
+<input type="submit" onclick="validateForm();" value="Enviar">
 </form>
 </body>
 </html>
